// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footnote renders closed 1`] = `
.c5 {
  padding-left: 1rem;
}

.c5 > span {
  font-weight: 500;
}

.c5 > span {
  font-weight: 400;
}

.c4 {
  list-style: decimal;
  word-wrap: break-word;
  font-weight: 700;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  margin-left: 1rem;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: inline-block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transition: -webkit-transform 500ms;
  -webkit-transition: transform 500ms;
  transition: transform 500ms;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  z-index: 1000;
}

.c1 {
  position: relative;
  width: 100%;
}

.c2 {
  overflow: auto;
  position: relative;
  max-height: calc(100vh - 57px);
  background-color: #f7f7f8;
  height: auto;
}

.c3 {
  padding-top: 1.5rem;
  padding-bottom: 3rem;
}

@media (min-width:768px) {
  .c5 {
    padding-left: 2rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-left: 2rem;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: -2rem;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 1rem;
  }
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c2 {
    max-height: calc(50vh - 57px);
  }
}

@media (min-width:768px) {
  .c3 {
    padding-top: 0rem;
    padding-bottom: 3rem;
  }
}

<div>
  <button
    type="button"
  >
    Button
  </button>
  <div
    class="c0"
  >
    <div>
      <div
        tabindex="0"
      />
      <div>
        <div
          class="c1"
        >
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
          <div
            class="TDS_Box-modules__verticalPadding-4___QMNNa"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <div
                    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
                  >
                    <span
                      class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                    >
                      Terms and conditions
                    </span>
                    <button
                      class="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                      id="close"
                      style="padding:4px;margin:-4px"
                      type="button"
                    >
                      <i
                        aria-label="close"
                        class="TDS_Icon-modules__iconTimes___-9Po2 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size24___37pQ7"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
        </div>
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_flexboxgrid2__col-md-11___2XskS TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <ol
                    class="TDS_Box-modules__betweenBottomMargin-3___1jBrz TDS_Box-modules__stack___33m4D c4"
                    start="3"
                  >
                    <li
                      class="c5"
                    >
                      <span
                        class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__color___2CNH8"
                      >
                        Available for new activations and renewals on a 2-year term with any rate plan with a minimum monthly spend of $55/mo. TELUS reserves the right to modify prices and eligible rate plans with this offer at any time without advance notice.
                      </span>
                    </li>
                  </ol>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Footnote renders opened 1`] = `
.c5 {
  padding-left: 1rem;
}

.c5 > span {
  font-weight: 500;
}

.c5 > span {
  font-weight: 400;
}

.c4 {
  list-style: decimal;
  word-wrap: break-word;
  font-weight: 700;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  margin-left: 1rem;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: inline-block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transition: -webkit-transform 500ms;
  -webkit-transition: transform 500ms;
  transition: transform 500ms;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  z-index: 1000;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1 {
  position: relative;
  width: 100%;
}

.c2 {
  overflow: auto;
  position: relative;
  max-height: calc(100vh - 57px);
  background-color: #f7f7f8;
  height: auto;
}

.c3 {
  padding-top: 1.5rem;
  padding-bottom: 3rem;
}

@media (min-width:768px) {
  .c5 {
    padding-left: 2rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-left: 2rem;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: -2rem;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 1rem;
  }
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c2 {
    max-height: calc(50vh - 57px);
  }
}

@media (min-width:768px) {
  .c3 {
    padding-top: 0rem;
    padding-bottom: 3rem;
  }
}

<div>
  <button
    type="button"
  >
    Button
  </button>
  <div
    class="c0"
  >
    <div>
      <div
        tabindex="0"
      />
      <div>
        <div
          class="c1"
        >
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
          <div
            class="TDS_Box-modules__verticalPadding-4___QMNNa"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <div
                    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
                  >
                    <span
                      class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                    >
                      Terms and conditions
                    </span>
                    <button
                      class="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                      id="close"
                      style="padding:4px;margin:-4px"
                      type="button"
                    >
                      <i
                        aria-label="close"
                        class="TDS_Icon-modules__iconTimes___-9Po2 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size24___37pQ7"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
        </div>
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_flexboxgrid2__col-md-11___2XskS TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <ol
                    class="TDS_Box-modules__betweenBottomMargin-3___1jBrz TDS_Box-modules__stack___33m4D c4"
                    start="3"
                  >
                    <li
                      class="c5"
                    >
                      <span
                        class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__color___2CNH8"
                      >
                        Available for new activations and renewals on a 2-year term with any rate plan with a minimum monthly spend of $55/mo. TELUS reserves the right to modify prices and eligible rate plans with this offer at any time without advance notice.
                      </span>
                    </li>
                  </ol>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
